# UnInC

./: CMakeLists.txt  README.md  installer.cpp
include/: rect.h  res.h  shader.h  text.h
include/glad/: gl.h
res/: rect.fs  rect.vs
src/: gl.c  rect.cpp  shader.cpp  text.cpp
